# meloinf

./: .gitignore  .pylintrc  README.md  pdm.toml  pyproject.toml  requirements.txt
scripts/: exports.py
src/: env.py  env.toml.bak  main.py  utils.py
src/data/wordlib/: data.json.bak  words2.txt
src/domain/: onebot.py
src/plugins/anime_searcher/: __plugin__.py
src/plugins/asoul_illness/: __plugin__.py
src/plugins/base_utils/: __init__.pyi  __plugin__.py  funcs.py  shares.py
src/plugins/bullshit_gen/: __plugin__.py
src/plugins/code_compile/: __init__.py  __init__.pyi  __plugin__.py
src/plugins/core_debug/: __plugin__.py
src/plugins/dice_simulator/: __plugin__.py  decks.py
src/plugins/echo/: __plugin__.py  test1.py
src/plugins/group_title/: __plugin__.py
src/plugins/news/: __plugin__.py
src/plugins/priority_debug/: __plugin__.py
src/plugins/random_pic/: __plugin__.py
src/plugins/shell/: __plugin__.py  store.py  utils.py
src/plugins/translator/: __plugin__.py
src/plugins/weather/: __plugin__.py  make_fig.py
src/plugins/word_lib/: __plugin__.py  wdict.py
